[MIK-1579] Fix style on iphone

--- a/public/assets/web/css/tc.css
+++ b/public/assets/web/css/tc.css
@@ -112,8 +112,8 @@ html, body {
 }
 
 .date-select select#year-select {
-  width: 65px;
-  background-position: 52px 11px;
+  width: 70px;
+  background-position: 58px 11px;
 }
 
 .security-code img {
@@ -122,14 +122,18 @@ html, body {
 
 .security-code .security-code-outside {
   margin-right: 8px;
+  width: 100%;
 }
 
 .security-code .security-code-outside #cvv-field {
   margin-right: 8px;
+  text-align: right;
+  width: 200px;
 }
 
 .security-code .security-code-outside #cvv-field input {
   margin-right: 10px;
+  float: right;
 }
 
 .security-code input {
